--- a/src/main/resources/static/css/movies.css
+++ b/src/main/resources/static/css/movies.css
@@ -94,6 +94,7 @@
     color: #222;
     width: 1200px;
 }
+.point-color {#006f7c}
 
 .movie-chart {padding: 20px 0 3rem;}
 
@@ -310,18 +311,24 @@ nav ul {
     object-fit: cover;
 }
 .movie-detail .movie-info {
-    padding: 3rem;
+    padding: 2rem 1rem 2rem 3rem;
     width: calc(100% - 316px);
     display: flex    ;
     flex-direction: column;
     font-size: 18px;
     gap: 1rem;
+    justify-content: space-between;
 }
 
 .movie-detail .movie-info .tit {
     font-size: 36px;
     font-weight: 700;
-    padding-bottom: 1rem;
+}
+
+.movie-detail .movie-info .movie-info-top {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem
 }
 
 .movie-detail .movie-info .info1 {
@@ -330,14 +337,34 @@ nav ul {
     gap: 1rem;
     align-items: center;
 }
-
-.movie-detail .movie-info info4.score {
+.movie-detail .movie-info .info2 {
     display: flex;
-    gap: 1rem;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 5px;
 }
+.movie-detail .movie-info .info3 .like-btn {
+    border: 1px solid #ccc;
+    width: 140px;
+    border-radius: 5px;
+    padding: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.movie-detail .movie-info .info4{
+    display: flex;
+    gap: 2rem;
+}
+.movie-detail .movie-info .info4 {font-size: 14px;}
+.movie-detail .movie-info .info4 h5 {padding-bottom: .5rem;}
+.movie-detail .movie-info .info4 span {font-size: 30px;}
 
 .movie-detail .movie-cont {
     line-height: 1.4;
+    padding: 1rem 0;
 }
 
 .movie-detail .movie-cont b {
@@ -346,7 +373,7 @@ nav ul {
 
 .movie-detail .movie-cont-wrap .tab {
     display: flex;
-    padding: 1rem 0;
+    padding: 3rem 0 2rem;
     width: 100%;
 }
 .movie-detail .movie-cont-wrap .tab li {
@@ -370,6 +397,49 @@ nav ul {
 .movie-detail .tab_cont li.on {
     display: block;
 }
+.movie-detail .review-top {
+    padding: 2rem 0 1rem;
+    border-bottom: 1px solid #ccc;
+ }
+ .movie-detail .review-top .alert-info {
+    font-weight: 600;
+    padding-bottom: 2rem;
+    text-align: center;
+    font-size: 18px;
+ }
+
+ .movie-detail .btn-review {
+     width: 100%;
+     padding: 15px;
+     font-size: 14px;
+     display: flex;
+     border-radius: 5px;
+     justify-content: center;
+     align-items: center;
+     max-width: 300px;
+     margin: 0 auto;
+     color: #fff;
+     background-color: #006f7c;
+     font-weight: 500;
+     cursor: pointer;
+ }
+  .movie-detail .review-list .card-inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 0;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+  }
+  .movie-detail .review-list .date {
+    font-size: 14px;
+    padding: .5rem 0 .75rem;
+  }
+.movie-detail .review-list .cart-delete {
+    font-size: 14px;
+    padding-top: 10px;
+    color: red;
+  }
 
 .movie-grade {
     display:inline-block;
