고객센터-문의하기로직

--- a/src/main/resources/templates/common/header.mustache
+++ b/src/main/resources/templates/common/header.mustache
@@ -73,7 +73,7 @@
                 {{/guestUser}}{{/loginMember}}
 
                 <li>
-                    <a href="/help">
+                    <a href="/support">
                         <img src="/images/icons/headset-icon.png">
                         <p>고객센터</p>
                     </a>
