--- a/src/main/resources/templates/movies/list.mustache
+++ b/src/main/resources/templates/movies/list.mustache
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/movies.css" />
 {{> common/header }}
+<link rel="stylesheet" href="/css/movies.css" />
 <a href="/movies/new">등록하기</a>
 <a href="/movies?status=NOT_SHOWING">상영안함</a>
 
@@ -75,7 +75,7 @@
                         </div>
                         <div class="item-btn">
                             <div class="like-btn" data-movie-id="{{movieId}}">
-                                <button class="heart-button {{#likedByCurrentUser}}active{{/likedByCurrentUser}}">
+                                <button class="heart-button {{#loginMember}}{{#likedByCurrentUser}}active{{/likedByCurrentUser}}{{/loginMember}}{{^loginMember}}disable{{/loginMember}}">
                                 <svg width="15px" height="15px" viewBox="0 0 15 15" version="1.1" id="heart" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M13.91,6.75c-1.17,2.25-4.3,5.31-6.07,6.94c-0.1903,0.1718-0.4797,0.1718-0.67,0C5.39,12.06,2.26,9,1.09,6.75&#xA;&#x9;C-1.48,1.8,5-1.5,7.5,3.45C10-1.5,16.48,1.8,13.91,6.75z" stroke="black"/>
                                 </svg>
@@ -376,5 +376,4 @@
         }
     });
 </script>
-
 {{> common/footer }}
