--- a/src/main/resources/templates/movies/new.mustache
+++ b/src/main/resources/templates/movies/new.mustache
@@ -68,14 +68,9 @@
             <small class="form-text text-muted">영화의 메인 포스터 이미지를 선택하세요.</small>
         </div>
         <div class="form-group">
-            <label for="subImageFile">서브 이미지</label>
-            <input type="file" id="subImageFile" name="subImageFile" accept="image/*">
-            <small class="form-text text-muted">메인 포스터 외의 추가 이미지를 선택하세요.</small>
-        </div>
-        <div class="form-group">
-            <label for="detailImageFiles">상세 스틸컷 이미지 (여러 개 선택 가능)</label>
+            <label for="detailImageFiles">스틸컷 이미지 (여러 개 선택 가능)</label>
             <input type="file" id="detailImageFiles" name="detailImageFiles" multiple accept="image/*">
-            <small class="form-text text-muted">영화의 상세 스틸컷 이미지를 선택하세요.</small>
+            <small class="form-text text-muted">영화의 스틸컷 이미지를 선택하세요.</small>
         </div>
 
         <div class="form-group">
