250722 예매율, 랭크 적용 완료

--- a/src/main/resources/templates/movies/view.mustache
+++ b/src/main/resources/templates/movies/view.mustache
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="reservation">
                                     <h5>예매율</h5>
-                                    <p><span>1위</span>({{reservationRate}}%)</p>
+                                    <p><span>{{rank}}위</span>({{reservationRate}}%)</p>
                                 </div>
                                 <div class="audience">
                                     <h5>누적관객수</h5>
