--- a/src/main/resources/templates/movies/view.mustache
+++ b/src/main/resources/templates/movies/view.mustache
@@ -175,7 +175,7 @@
                                             </div>
                                         {{/reviews}}
                                         {{^reviews}}
-                                            <div class="alert-info">
+                                            <div class="alert-info pt-20">
                                                 아직 등록된 리뷰가 없습니다. 첫 번째 리뷰를 작성해보세요!
                                             </div>
                                         {{/reviews}}
