--- a/src/main/resources/templates/member/login.mustache
+++ b/src/main/resources/templates/member/login.mustache
@@ -3,6 +3,7 @@
 <div class="container login-page">
     <h3 class="page-title">로그인</h3>
     <form method="post" action="/member/login" class="login-form">
+        <input type="hidden" name="redirect" value="{{redirect}}">
         <div class="form-group">
             <input type="text" id="memberId" name="memberId" placeholder="아이디를 입력해주세요." required>
         </div>
